--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
   border-radius: 10px;
   width: 100%;
   padding: 5px;
-  /* border: solid #eee 2px; */
+  border: solid #eee 2px;
   outline: none;
 }
 .btn.primary
@@ -55,13 +55,19 @@
   color: white;
 }
 
-.input:focus , .text-area:focus{
-  border: 1px solid #000;
+input:hover{
+  border-color:#4F0759;
 }
 
+.shadow-sm.card-body
+{
+  border: solid #4F0759 1px;
+  margin-bottom: 30px;
+
+}
 .divider {
   background-color: #000;
-  border: solid #000 3px;
+  border: solid #4F0759 3px;
   border-radius: 2px;
   width: 10em;
   margin-top: 4px;
