--- a/src/App.css
+++ b/src/App.css
@@ -1,97 +1,87 @@
-*
-{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.center{
-  margin: 0 auto;
-  width: 100px; 
-}
-.container
-{
-  display: grid;
-  place-items: center;
-  width: 100%;
-  height: 100vh;
+.center {
+    margin: 0 auto;
+    width: 100px;
 }
 
-.size-sm{
-  width: 42em;
+.container {
+    display: grid;
+    place-items: center;
+    width: 100%;
+    height: 100vh;
 }
 
-.input, .text-area
-{
-  transition: 0.2s ease-in;
-  border-radius: 10px;
-  width: 100%;
-  padding: 5px;
-  border: solid #eee 2px;
-  outline: none;
-}
-.btn.primary
-{
-  border: 1px solid #000;
-
-  background-color: white;
-  color: #000;
+.size-sm {
+    width: 42em;
 }
 
-.donation
-{
-  display: flex;
-
-}
-.donation input 
-{
-  padding: 8px;
-  border: 1px solid #000;
-  border-radius: 10px;
-}
-.btn.primary:hover 
-{
-  background-color: #000;
-  color: white;
+.input,
+.text-area {
+    transition: 0.2s ease-in;
+    border-radius: 10px;
+    width: 100%;
+    padding: 10px;
+    border: solid rgb(150, 147, 147) 2px;
+    outline: none;
 }
 
-input:hover{
-  border-color:#4F0759;
+.btn.primary {
+    border: 1px solid #000;
+    background-color: white;
+    color: #000;
 }
 
-.shadow-sm.card-body
-{
-  border: solid #4F0759 1px;
-  margin-bottom: 30px;
-
+.donation {
+    display: flex;
 }
+
+.btn.primary:hover {
+    background-color: #000;
+    color: white;
+}
+
+input:hover {
+    border-color: #4F0759;
+}
+
+.shadow-sm.card-body {
+    border: solid #4F0759 1px;
+    margin-bottom: 30px;
+}
+
 .divider {
-  background-color: #000;
-  border: solid #4F0759 3px;
-  border-radius: 2px;
-  width: 10em;
-  margin-top: 4px;
+    background-color: #4F0759;
+    border: solid #4F0759 3px;
+    border-radius: 2px;
+    width: 20.5em;
+    margin-top: 4px;
 }
 
-.but{
-  padding: 9px;
-  border-radius: 5px;
-  outline: none;
-  border: none;
-  width: 30%;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  background-color: #fff;  
-  color: #000;
-  border: 1px solid #000;
-  transition: 0.3s ease;
+.but {
+    padding: 9px;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    width: 30%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #000;
+    transition: 0.3s ease;
 }
 
-.but:focus, .but:hover {
-  background-color: #000;
-  transform: translateX(-50%,50%);
-  color: white;
-  transition: .5s;
+.but:focus,
+.but:hover {
+    background-color: #000;
+    transform: translateX(-50%, 50%);
+    color: white;
+    transition: .5s;
 }
 
 
@@ -99,19 +89,19 @@ input:hover{
 [ FONT ]*/
 
 a {
-  margin: 0px;
-  transition: all 0.4s;
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
+    margin: 0px;
+    transition: all 0.4s;
+    -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    -moz-transition: all 0.4s;
 }
 
 a:focus {
-  outline: none !important;
+    outline: none !important;
 }
 
 a:hover {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 
@@ -123,53 +113,42 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0px;
+    margin: 0px;
 }
 
 p {
-  margin: 0px;
+    margin: 0px;
 }
 
 ul,
 li {
-  margin: 0px;
-  list-style-type: none;
+    margin: 0px;
+    list-style-type: none;
 }
 
 
 /* ------------------------------------ */
 
-input {
-  display: block;
-  outline: none;
-  border: none !important;
-}
-
 textarea {
-  display: block;
-  outline: none;
-}
-
-textarea:focus,
-input:focus {
-  border-color: transparent !important;
+    display: block;
+    outline: none;
 }
 
 
 /* ------------------------------------ */
 
 button {
-  outline: none !important;
-  border: none;
-  background: transparent;
+    outline: none !important;
+    border: none;
+    background: transparent;
 }
 
 button:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 iframe {
-  border: none !important;
+    border: none !important;
 }
 
 
@@ -177,49 +156,50 @@ iframe {
 [ Scroll bar ]*/
 
 .js-pscroll {
-  position: relative;
-  overflow: hidden;
+    position: relative;
+    overflow: hidden;
 }
-.table100
-{
-  margin-bottom: 100px;
+
+.table100 {
+    margin-bottom: 100px;
 }
+
 .table100 .ps__rail-y {
-  width: 9px;
-  background-color: transparent;
-  opacity: 1 !important;
-  right: 5px;
+    width: 9px;
+    background-color: transparent;
+    opacity: 1 !important;
+    right: 5px;
 }
 
 .table100 .ps__rail-y::before {
-  content: "";
-  display: block;
-  position: absolute;
-  background-color: #ebebeb;
-  border-radius: 5px;
-  width: 100%;
-  height: calc(100% - 30px);
-  left: 0;
-  top: 15px;
+    content: "";
+    display: block;
+    position: absolute;
+    background-color: #ebebeb;
+    border-radius: 5px;
+    width: 100%;
+    height: calc(100% - 30px);
+    left: 0;
+    top: 15px;
 }
 
 .table100 .ps__rail-y .ps__thumb-y {
-  width: 100%;
-  right: 0;
-  background-color: transparent;
-  opacity: 1 !important;
+    width: 100%;
+    right: 0;
+    background-color: transparent;
+    opacity: 1 !important;
 }
 
 .table100 .ps__rail-y .ps__thumb-y::before {
-  content: "";
-  display: block;
-  position: absolute;
-  background-color: #cccccc;
-  border-radius: 5px;
-  width: 100%;
-  height: calc(100% - 30px);
-  left: 0;
-  top: 15px;
+    content: "";
+    display: block;
+    position: absolute;
+    background-color: #cccccc;
+    border-radius: 5px;
+    width: 100%;
+    height: calc(100% - 30px);
+    left: 0;
+    top: 15px;
 }
 
 
@@ -227,27 +207,27 @@ iframe {
 [ Table ]*/
 
 .limiter {
-  width: 1366px;
-  margin: 0 auto;
+    width: 1366px;
+    margin: 0 auto;
 }
 
 .container-table100 {
-  width: 100%;
-  min-height: 100vh;
-  background: #fff;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 33px 30px;
+    width: 100%;
+    min-height: 100vh;
+    background: #fff;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 33px 30px;
 }
 
 .wrap-table100 {
-  width: 1170px;
+    width: 1170px;
 }
 
 
@@ -255,67 +235,65 @@ iframe {
 [ Table ]*/
 
 .table100 {
-  background-color: #fff;
+    background-color: #fff;
 }
 
 table {
-  width: 900px;
+    width: 900px;
 }
 
 th,
 td {
-  font-weight: unset;
-  padding-right: 10px;
+    font-weight: unset;
+    padding-right: 10px;
 }
 
 .column1 {
-  width: 33%;
-  padding-left: 40px;
+    width: 33%;
+    padding-left: 40px;
 }
 
 .column2 {
-  width: 33%;
+    width: 33%;
 }
 
 .column3 {
-  width: 33%;
+    width: 33%;
 }
 
-
 .table100-head th {
-  padding-top: 18px;
-  padding-bottom: 18px;
-  color: black;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    color: black;
 }
 
 .table100-body td {
-  padding-top: 16px;
-  padding-bottom: 16px;
+    padding-top: 16px;
+    padding-bottom: 16px;
 }
 
-.table100-body tr:hover, .table100-body tr:hover td
-{
-  cursor: pointer;
-  background-color: #393939;
-  color: white;
+.table100-body tr:hover,
+.table100-body tr:hover td {
+    cursor: pointer;
+    background-color: #cac8c8;
+    color: rgb(0, 0, 0);
 }
-
 
 .table100 {
-  position: relative;
-  padding-top: 60px;
+    position: relative;
+    padding-top: 60px;
 }
 
 .table100-head {
-  position: absolute;
-  width: 100%;
-  top: 0;
-  left: 0;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
 }
 
 .table100-body {
-  max-height: 585px;
-  overflow: auto;
+    max-height: 585px;
+    overflow: auto;
 }
 
 
@@ -323,47 +301,47 @@ td {
 [ Ver1 ]*/
 
 .table100.ver1 th {
-  font-family: Lato-Bold;
-  font-size: 18px;
-  color: #fff;
-  line-height: 1.4;
-  background-color: #6c7ae0;
+    font-family: Lato-Bold;
+    font-size: 18px;
+    color: #fff;
+    line-height: 1.4;
+    background-color: #6c7ae0;
 }
 
 .table100.ver1 td {
-  font-family: Lato-Regular;
-  font-size: 15px;
-  color: #808080;
-  line-height: 1.4;
+    font-family: Lato-Regular;
+    font-size: 15px;
+    color: #808080;
+    line-height: 1.4;
 }
 
 .table100.ver1 .table100-body tr:nth-child(even) {
-  background-color: #f8f6ff;
+    background-color: #f8f6ff;
 }
 
 
 /*---------------------------------------------*/
 
 .table100.ver1 {
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
-  -webkit-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
-  -o-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
-  -ms-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+    -o-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+    -ms-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
 }
 
 .table100.ver1 .ps__rail-y {
-  right: 5px;
+    right: 5px;
 }
 
 .table100.ver1 .ps__rail-y::before {
-  background-color: #ebebeb;
+    background-color: #ebebeb;
 }
 
 .table100.ver1 .ps__rail-y .ps__thumb-y::before {
-  background-color: #cccccc;
+    background-color: #cccccc;
 }
 
 
@@ -371,15 +349,15 @@ td {
 [ Ver2 ]*/
 
 .table100.ver2 .table100-head {
-  box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.1);
-  -webkit-box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.1);
-  -o-box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.1);
-  -ms-box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.1);
+    -o-box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.1);
+    -ms-box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.1);
 }
 
 .table100.ver2 th {
-  font-family: Lato-Bold;
+    font-family: Lato-Bold;
     font-size: 18px;
     /* color: #fa4251; */
     /* text-align: center; */
@@ -389,39 +367,39 @@ td {
 }
 
 .table100.ver2 td {
-  font-family: Lato-Regular;
-  font-size: 15px;
-  color: #808080;
-  line-height: 1.4;
+    font-family: Lato-Regular;
+    font-size: 15px;
+    color: #808080;
+    line-height: 1.4;
 }
 
 .table100.ver2 .table100-body tr {
-  border-bottom: 1px solid #f2f2f2;
+    border-bottom: 1px solid #f2f2f2;
 }
 
 
 /*---------------------------------------------*/
 
 .table100.ver2 {
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
-  -webkit-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
-  -o-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
-  -ms-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+    -o-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+    -ms-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
 }
 
 .table100.ver2 .ps__rail-y {
-  right: 5px;
+    right: 5px;
 }
 
 .table100.ver2 .ps__rail-y::before {
-  background-color: #ebebeb;
+    background-color: #ebebeb;
 }
 
 .table100.ver2 .ps__rail-y .ps__thumb-y::before {
-  background-color: #cccccc;
+    background-color: #cccccc;
 }
 
 
@@ -429,49 +407,49 @@ td {
 [ Ver3 ]*/
 
 .table100.ver3 {
-  background-color: #393939;
+    background-color: #393939;
 }
 
 .table100.ver3 th {
-  font-family: Lato-Bold;
-  font-size: 15px;
-  color: #00ad5f;
-  line-height: 1.4;
-  text-transform: uppercase;
-  background-color: #393939;
+    font-family: Lato-Bold;
+    font-size: 15px;
+    color: #00ad5f;
+    line-height: 1.4;
+    text-transform: uppercase;
+    background-color: #393939;
 }
 
 .table100.ver3 td {
-  font-family: Lato-Regular;
-  font-size: 15px;
-  color: #808080;
-  line-height: 1.4;
-  background-color: #222222;
+    font-family: Lato-Regular;
+    font-size: 15px;
+    color: #808080;
+    line-height: 1.4;
+    background-color: #222222;
 }
 
 
 /*---------------------------------------------*/
 
 .table100.ver3 {
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
-  -webkit-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
-  -o-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
-  -ms-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+    -o-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+    -ms-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
 }
 
 .table100.ver3 .ps__rail-y {
-  right: 5px;
+    right: 5px;
 }
 
 .table100.ver3 .ps__rail-y::before {
-  background-color: #4e4e4e;
+    background-color: #4e4e4e;
 }
 
 .table100.ver3 .ps__rail-y .ps__thumb-y::before {
-  background-color: #00ad5f;
+    background-color: #00ad5f;
 }
 
 
@@ -479,58 +457,58 @@ td {
 [ Ver4 ]*/
 
 .table100.ver4 {
-  margin-right: -20px;
+    margin-right: -20px;
 }
 
 .table100.ver4 .table100-head {
-  padding-right: 20px;
+    padding-right: 20px;
 }
 
 .table100.ver4 th {
-  font-family: Lato-Bold;
-  font-size: 18px;
-  color: #4272d7;
-  line-height: 1.4;
-  background-color: transparent;
-  border-bottom: 2px solid #f2f2f2;
+    font-family: Lato-Bold;
+    font-size: 18px;
+    color: #4272d7;
+    line-height: 1.4;
+    background-color: transparent;
+    border-bottom: 2px solid #f2f2f2;
 }
 
 .table100.ver4 .column1 {
-  padding-left: 7px;
+    padding-left: 7px;
 }
 
 .table100.ver4 td {
-  font-family: Lato-Regular;
-  font-size: 15px;
-  color: #808080;
-  line-height: 1.4;
+    font-family: Lato-Regular;
+    font-size: 15px;
+    color: #808080;
+    line-height: 1.4;
 }
 
 .table100.ver4 .table100-body tr {
-  border-bottom: 1px solid #f2f2f2;
+    border-bottom: 1px solid #f2f2f2;
 }
 
 
 /*---------------------------------------------*/
 
 .table100.ver4 {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 .table100.ver4 .table100-body {
-  padding-right: 20px;
+    padding-right: 20px;
 }
 
 .table100.ver4 .ps__rail-y {
-  right: 0px;
+    right: 0px;
 }
 
 .table100.ver4 .ps__rail-y::before {
-  background-color: #ebebeb;
+    background-color: #ebebeb;
 }
 
 .table100.ver4 .ps__rail-y .ps__thumb-y::before {
-  background-color: #cccccc;
+    background-color: #cccccc;
 }
 
 
@@ -538,89 +516,89 @@ td {
 [ Ver5 ]*/
 
 .table100.ver5 {
-  margin-right: -30px;
+    margin-right: -30px;
 }
 
 .table100.ver5 .table100-head {
-  padding-right: 30px;
+    padding-right: 30px;
 }
 
 .table100.ver5 th {
-  font-family: Lato-Bold;
-  font-size: 14px;
-  color: #555555;
-  line-height: 1.4;
-  text-transform: uppercase;
-  background-color: transparent;
+    font-family: Lato-Bold;
+    font-size: 14px;
+    color: #555555;
+    line-height: 1.4;
+    text-transform: uppercase;
+    background-color: transparent;
 }
 
 .table100.ver5 td {
-  font-family: Lato-Regular;
-  font-size: 15px;
-  color: #808080;
-  line-height: 1.4;
-  background-color: #f7f7f7;
+    font-family: Lato-Regular;
+    font-size: 15px;
+    color: #808080;
+    line-height: 1.4;
+    background-color: #f7f7f7;
 }
 
 .table100.ver5 .table100-body tr {
-  overflow: hidden;
-  border-bottom: 10px solid #fff;
-  border-radius: 10px;
+    overflow: hidden;
+    border-bottom: 10px solid #fff;
+    border-radius: 10px;
 }
 
 .table100.ver5 .table100-body table {
-  border-collapse: separate;
-  border-spacing: 0 10px;
+    border-collapse: separate;
+    border-spacing: 0 10px;
 }
 
 .table100.ver5 .table100-body td {
-  border: solid 1px transparent;
-  border-style: solid none;
-  padding-top: 10px;
-  padding-bottom: 10px;
+    border: solid 1px transparent;
+    border-style: solid none;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .table100.ver5 .table100-body td:first-child {
-  border-left-style: solid;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+    border-left-style: solid;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 
 .table100.ver5 .table100-body td:last-child {
-  border-right-style: solid;
-  border-bottom-right-radius: 10px;
-  border-top-right-radius: 10px;
+    border-right-style: solid;
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .table100.ver5 tr:hover td {
-  background-color: #ebebeb;
-  cursor: pointer;
+    background-color: #ebebeb;
+    cursor: pointer;
 }
 
 .table100.ver5 .table100-head th {
-  padding-top: 25px;
-  padding-bottom: 25px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
 
 
 /*---------------------------------------------*/
 
 .table100.ver5 {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 .table100.ver5 .table100-body {
-  padding-right: 30px;
+    padding-right: 30px;
 }
 
 .table100.ver5 .ps__rail-y {
-  right: 0px;
+    right: 0px;
 }
 
 .table100.ver5 .ps__rail-y::before {
-  background-color: #ebebeb;
+    background-color: #ebebeb;
 }
 
 .table100.ver5 .ps__rail-y .ps__thumb-y::before {
-  background-color: #cccccc;
+    background-color: #cccccc;
 }
